# pomodoro-timer-qt

./: .gitignore  CMakeLists.txt  README.md  build_run.sh  central.cpp  central.hpp  main.cpp  main_window.cpp  main_window.hpp  nordic_clock.cpp  nordic_clock.hpp  pomodoro.cpp  pomodoro.hpp  resources.qrc  settings.cpp  settings.hpp  style.qss  timer.cpp  timer.hpp  utils.hpp
res/: resources.qrc
src/: main.cpp
src/main_window/: main_window.cpp  main_window.hpp
src/nordic_clock/: nordic_clock.hpp
src/pomodoro/: pomodoro.hpp
src/settings/: settings.hpp
src/timer/: timer.cpp  timer.hpp
